# easy-mlops

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: cli.md  deployment-observability.md  development.md  getting-started.md  index.md  pipeline.md  preprocessing.md  publishing.md  training.md
easy_mlops/: __init__.py  cli.py  pipeline.py
easy_mlops/config/: __init__.py  config.py
easy_mlops/deployment/: __init__.py  deployer.py  steps.py
easy_mlops/distributed/: __init__.py  errors.py  master.py  state.py  task_runner.py  worker.py
easy_mlops/observability/: __init__.py  monitor.py  steps.py
easy_mlops/preprocessing/: __init__.py  preprocessor.py  steps.py
easy_mlops/training/: __init__.py  backends.py  trainer.py
examples/: README.md  complete_workflow.sh  distributed_runtime.sh  monitoring_report.txt  sample_data.csv  workflow-config.yaml
examples/data/: house_prices.csv
examples/pipeline/: README.md  predictions_workflow.json
examples/pipeline/configs/: observability_strict.yaml  quickstart.yaml  regression_neural_network.yaml
examples/pipeline/scripts/: 00_init_project.sh  01_train_quickstart.sh  02_train_regression_nn.sh  03_predict_latest.sh  04_status_latest.sh  05_observe_latest.sh  06_run_programmatic_pipeline.py
tests/: conftest.py  test_config.py  test_deployment.py  test_monitor.py  test_pipeline.py  test_preprocessor.py  test_state_store.py  test_trainer.py
